architect/internal/generated/endpoint/endpoint_parser.go
// Code generated from internal/infrastructure/antlr/grammars/Endpoint.g4 by ANTLR 4.13.2. DO NOT EDIT.

package endpoint // Endpoint
import (
	"fmt"
	"strconv"
	"sync"

	"github.com/antlr4-go/antlr/v4"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}

type EndpointParser struct {
	*antlr.BaseParser
}

var EndpointParserStaticData struct {
	once                   sync.Once
	serializedATN          []int32
	LiteralNames           []string
	SymbolicNames          []string
	RuleNames              []string
	PredictionContextCache *antlr.PredictionContextCache
	atn                    *antlr.ATN
	decisionToDFA          []*antlr.DFA
}

func endpointParserInit() {
	staticData := &EndpointParserStaticData
	staticData.LiteralNames = []string{
		"", "'endpoint'", "'input'", "'fetch'", "'from'", "'where'", "'create'",
		"'store'", "'to'", "'update'", "'emit'", "'return'", "'path'", "'query'",
		"'body'", "'header'", "'cookie'", "'GET'", "'POST'", "'PUT'", "'PATCH'",
		"'DELETE'", "'List'", "'true'", "'false'", "'{'", "'}'", "'('", "')'",
		"'['", "']'", "'<'", "'>'", "'<='", "'>='", "'=='", "'!='", "'='", "':'",
		"'.'", "','", "'|'", "'+'", "'*'", "'?'",
	}
	staticData.SymbolicNames = []string{
		"", "ENDPOINT", "INPUT", "FETCH", "FROM", "WHERE", "CREATE", "STORE",
		"TO", "UPDATE", "EMIT", "RETURN", "PATH", "QUERY", "BODY", "HEADER",
		"COOKIE", "GET", "POST", "PUT", "PATCH", "DELETE", "LIST", "TRUE", "FALSE",
		"LBRACE", "RBRACE", "LPAREN", "RPAREN", "LBRACKET", "RBRACKET", "LT",
		"GT", "LTE", "GTE", "EQ", "NEQ", "ASSIGN", "COLON", "DOT", "COMMA",
		"PIPE", "PLUS", "STAR", "QUESTION", "IDENT", "FLOAT", "INT", "STRING",
		"LINE_COMMENT", "BLOCK_COMMENT", "WS",
	}
	staticData.RuleNames = []string{
		"program", "endpointDecl", "endpointBody", "inputBlock", "inputField",
		"inputSourceRule", "inputSource", "inputSourceKind", "action", "fetchAction",
		"createAction", "storeAction", "updateAction", "emitAction", "returnAction",
		"typedVariable", "assignmentBlock", "assignment", "condition", "comparator",
		"expression", "functionCall", "argumentList", "selector", "identifier",
		"typeRef", "typeName", "numberConstraint", "optionalMarker", "value",
		"numberValue", "httpMethod",
	}
	staticData.PredictionContextCache = antlr.NewPredictionContextCache()
	deserializer := antlr.NewATNDeserializer(nil)
	staticData.atn = deserializer.Deserialize(staticData.serializedATN)
	atn := staticData.atn
	staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
	decisionToDFA := staticData.decisionToDFA
	for index, state := range atn.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(state, index)
	}
}

// EndpointParserInit initializes any static state used to implement EndpointParser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewEndpointParser(). You can call this function if you wish to initialize the static state ahead
// of time.
func EndpointParserInit() {
	staticData := &EndpointParserStaticData
	staticData.once.Do(endpointParserInit)
}

// NewEndpointParser produces a new parser instance for the optional input antlr.TokenStream.
func NewEndpointParser(input antlr.TokenStream) *EndpointParser {
	EndpointParserInit()
	this := new(EndpointParser)
	this.BaseParser = antlr.NewBaseParser(input)
	staticData := &EndpointParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.PredictionContextCache)
	this.RuleNames = staticData.RuleNames
	this.LiteralNames = staticData.LiteralNames
	this.SymbolicNames = staticData.SymbolicNames
	this.GrammarFileName = "Endpoint.g4"

	return this
}

// EndpointParser tokens.
const (
	EndpointParserEOF           = antlr.TokenEOF
	EndpointParserENDPOINT      = 1
	EndpointParserINPUT         = 2
	EndpointParserFETCH         = 3
	EndpointParserFROM          = 4
	EndpointParserWHERE         = 5
	EndpointParserCREATE        = 6
	EndpointParserSTORE         = 7
	EndpointParserTO            = 8
	EndpointParserUPDATE        = 9
	EndpointParserEMIT          = 10
	EndpointParserRETURN        = 11
	EndpointParserPATH          = 12
	EndpointParserQUERY         = 13
	EndpointParserBODY          = 14
	EndpointParserHEADER        = 15
	EndpointParserCOOKIE        = 16
	EndpointParserGET           = 17
	EndpointParserPOST          = 18
	EndpointParserPUT           = 19
	EndpointParserPATCH         = 20
	EndpointParserDELETE        = 21
	EndpointParserLIST          = 22
	EndpointParserTRUE          = 23
	EndpointParserFALSE         = 24
	EndpointParserLBRACE        = 25
	EndpointParserRBRACE        = 26
	EndpointParserLPAREN        = 27
	EndpointParserRPAREN        = 28
	EndpointParserLBRACKET      = 29
	EndpointParserRBRACKET      = 30
	EndpointParserLT            = 31
	EndpointParserGT            = 32
	EndpointParserLTE           = 33
	EndpointParserGTE           = 34
	EndpointParserEQ            = 35
	EndpointParserNEQ           = 36
	EndpointParserASSIGN        = 37
	EndpointParserCOLON         = 38
	EndpointParserDOT           = 39
	EndpointParserCOMMA         = 40
	EndpointParserPIPE          = 41
	EndpointParserPLUS          = 42
	EndpointParserSTAR          = 43
	EndpointParserQUESTION      = 44
	EndpointParserIDENT         = 45
	EndpointParserFLOAT         = 46
	EndpointParserINT           = 47
	EndpointParserSTRING        = 48
	EndpointParserLINE_COMMENT  = 49
	EndpointParserBLOCK_COMMENT = 50
	EndpointParserWS            = 51
)

// EndpointParser rules.
const (
	EndpointParserRULE_program          = 0
	EndpointParserRULE_endpointDecl     = 1
	EndpointParserRULE_endpointBody     = 2
	EndpointParserRULE_inputBlock       = 3
	EndpointParserRULE_inputField       = 4
	EndpointParserRULE_inputSourceRule  = 5
	EndpointParserRULE_inputSource      = 6
	EndpointParserRULE_inputSourceKind  = 7
	EndpointParserRULE_action           = 8
	EndpointParserRULE_fetchAction      = 9
	EndpointParserRULE_createAction     = 10
	EndpointParserRULE_storeAction      = 11
	EndpointParserRULE_updateAction     = 12
	EndpointParserRULE_emitAction       = 13
	EndpointParserRULE_returnAction     = 14
	EndpointParserRULE_typedVariable    = 15
	EndpointParserRULE_assignmentBlock  = 16
	EndpointParserRULE_assignment       = 17
	EndpointParserRULE_condition        = 18
	EndpointParserRULE_comparator       = 19
	EndpointParserRULE_expression       = 20
	EndpointParserRULE_functionCall     = 21
	EndpointParserRULE_argumentList     = 22
	EndpointParserRULE_selector         = 23
	EndpointParserRULE_identifier       = 24
	EndpointParserRULE_typeRef          = 25
	EndpointParserRULE_typeName         = 26
	EndpointParserRULE_numberConstraint = 27
	EndpointParserRULE_optionalMarker   = 28
	EndpointParserRULE_value            = 29
	EndpointParserRULE_numberValue      = 30
	EndpointParserRULE_httpMethod       = 31
)

// IProgramContext is an interface to support dynamic dispatch.
type IProgramContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	EndpointDecl() IEndpointDeclContext
	EOF() antlr.TerminalNode

	// IsProgramContext differentiates from other interfaces.
	IsProgramContext()
}

type ProgramContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyProgramContext() *ProgramContext {
	var p = new(ProgramContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = EndpointParserRULE_program
	return p
}

func InitEmptyProgramContext(p *ProgramContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = EndpointParserRULE_program
}

func (*ProgramContext) IsProgramContext() {}

func NewProgramContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ProgramContext {
	var p = new(ProgramContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = EndpointParserRULE_program

	return p
}

func (s *ProgramContext) GetParser() antlr.Parser { return s.parser }

func (s *ProgramContext) EndpointDecl() IEndpointDeclContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IEndpointDeclContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IEndpointDeclContext)
}

func (s *ProgramContext) EOF() antlr.TerminalNode {
	return s.GetToken(EndpointParserEOF, 0)
}

func (s *ProgramContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ProgramContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ProgramContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case EndpointVisitor:
		return t.VisitProgram(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *EndpointParser) Program() (localctx IProgramContext) {
	localctx = NewProgramContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, EndpointParserRULE_program)
	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(64)
		p.EndpointDecl()
	}
	{
		p.SetState(65)
		p.Match(EndpointParserEOF)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IEndpointDeclContext is an interface to support dynamic dispatch.
type IEndpointDeclContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	ENDPOINT() antlr.TerminalNode
	IDENT() antlr.TerminalNode
	HttpMethod() IHttpMethodContext
	STRING() antlr.TerminalNode
	LBRACE() antlr.TerminalNode
	RBRACE() antlr.TerminalNode
	AllEndpointBody() []IEndpointBodyContext
	EndpointBody(i int) IEndpointBodyContext

	// IsEndpointDeclContext differentiates from other interfaces.
	IsEndpointDeclContext()
}

type EndpointDeclContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyEndpointDeclContext() *EndpointDeclContext {
	var p = new(EndpointDeclContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = EndpointParserRULE_endpointDecl
	return p
}

func InitEmptyEndpointDeclContext(p *EndpointDeclContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = EndpointParserRULE_endpointDecl
}

func (*EndpointDeclContext) IsEndpointDeclContext() {}

func NewEndpointDeclContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *EndpointDeclContext {
	var p = new(EndpointDeclContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = EndpointParserRULE_endpointDecl

	return p
}

func (s *EndpointDeclContext) GetParser() antlr.Parser { return s.parser }

func (s *EndpointDeclContext) ENDPOINT() antlr.TerminalNode {
	return s.GetToken(EndpointParserENDPOINT, 0)
}

func (s *EndpointDeclContext) IDENT() antlr.TerminalNode {
	return s.GetToken(EndpointParserIDENT, 0)
}

func (s *EndpointDeclContext) HttpMethod() IHttpMethodContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IHttpMethodContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IHttpMethodContext)
}

func (s *EndpointDeclContext) STRING() antlr.TerminalNode {
	return s.GetToken(EndpointParserSTRING, 0)
}

func (s *EndpointDeclContext) LBRACE() antlr.TerminalNode {
	return s.GetToken(EndpointParserLBRACE, 0)
}

func (s *EndpointDeclContext) RBRACE() antlr.TerminalNode {
	return s.GetToken(EndpointParserRBRACE, 0)
}

func (s *EndpointDeclContext) AllEndpointBody() []IEndpointBodyContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IEndpointBodyContext); ok {
			len++
		}
	}

	tst := make([]IEndpointBodyContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IEndpointBodyContext); ok {
			tst[i] = t.(IEndpointBodyContext)
			i++
		}
	}

	return tst
}

func (s *EndpointDeclContext) EndpointBody(i int) IEndpointBodyContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IEndpointBodyContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IEndpointBodyContext)
}

func (s *EndpointDeclContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *EndpointDeclContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *EndpointDeclContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case EndpointVisitor:
		return t.VisitEndpointDecl(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *EndpointParser) EndpointDecl() (localctx IEndpointDeclContext) {
	localctx = NewEndpointDeclContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, EndpointParserRULE_endpointDecl)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(67)
		p.Match(EndpointParserENDPOINT)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(68)
		p.Match(EndpointParserIDENT)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(69)
		p.HttpMethod()
	}
	{
		p.SetState(70)
		p.Match(EndpointParserSTRING)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(71)
		p.Match(EndpointParserLBRACE)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	p.SetState(75)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	for (int64(_la) & ^0x3f) == 0 && ((int64(1)<<_la)&3788) != 0 {
		{
			p.SetState(72)
			p.EndpointBody()
		}

		p.SetState(77)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(78)
		p.Match(EndpointParserRBRACE)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IEndpointBodyContext is an interface to support dynamic dispatch.
type IEndpointBodyContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	InputBlock() IInputBlockContext
	Action_() IActionContext

	// IsEndpointBodyContext differentiates from other interfaces.
	IsEndpointBodyContext()
}

type EndpointBodyContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyEndpointBodyContext() *EndpointBodyContext {
	var p = new(EndpointBodyContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = EndpointParserRULE_endpointBody
	return p
}

func InitEmptyEndpointBodyContext(p *EndpointBodyContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = EndpointParserRULE_endpointBody
}

func (*EndpointBodyContext) IsEndpointBodyContext() {}

func NewEndpointBodyContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *EndpointBodyContext {
	var p = new(EndpointBodyContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = EndpointParserRULE_endpointBody

	return p
}

func (s *EndpointBodyContext) GetParser() antlr.Parser { return s.parser }

func (s *EndpointBodyContext) InputBlock() IInputBlockContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IInputBlockContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IInputBlockContext)
}

func (s *EndpointBodyContext) Action_() IActionContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IActionContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IActionContext)
}

func (s *EndpointBodyContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *EndpointBodyContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *EndpointBodyContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case EndpointVisitor:
		return t.VisitEndpointBody(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *EndpointParser) EndpointBody() (localctx IEndpointBodyContext) {
	localctx = NewEndpointBodyContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, EndpointParserRULE_endpointBody)
	p.SetState(82)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}

	switch p.GetTokenStream().LA(1) {
	case EndpointParserINPUT:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(80)
			p.InputBlock()
		}

	case EndpointParserFETCH, EndpointParserCREATE, EndpointParserSTORE, EndpointParserUPDATE, EndpointParserEMIT, EndpointParserRETURN:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(81)
			p.Action_()
		}

	default:
		p.SetError(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
		goto errorExit
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IInputBlockContext is an interface to support dynamic dispatch.
type IInputBlockContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	INPUT() antlr.TerminalNode
	LBRACE() antlr.TerminalNode
	RBRACE() antlr.TerminalNode
	AllInputField() []IInputFieldContext
	InputField(i int) IInputFieldContext

	// IsInputBlockContext differentiates from other interfaces.
	IsInputBlockContext()
}

type InputBlockContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyInputBlockContext() *InputBlockContext {
	var p = new(InputBlockContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = EndpointParserRULE_inputBlock
	return p
}

func InitEmptyInputBlockContext(p *InputBlockContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = EndpointParserRULE_inputBlock
}

func (*InputBlockContext) IsInputBlockContext() {}

func NewInputBlockContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *InputBlockContext {
	var p = new(InputBlockContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = EndpointParserRULE_inputBlock

	return p
}

func (s *InputBlockContext) GetParser() antlr.Parser { return s.parser }

func (s *InputBlockContext) INPUT() antlr.TerminalNode {
	return s.GetToken(EndpointParserINPUT, 0)
}

func (s *InputBlockContext) LBRACE() antlr.TerminalNode {
	return s.GetToken(EndpointParserLBRACE, 0)
}

func (s *InputBlockContext) RBRACE() antlr.TerminalNode {
	return s.GetToken(EndpointParserRBRACE, 0)
}

func (s *InputBlockContext) AllInputField() []IInputFieldContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IInputFieldContext); ok {
			len++
		}
	}

	tst := make([]IInputFieldContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IInputFieldContext); ok {
			tst[i] = t.(IInputFieldContext)
			i++
		}
	}

	return tst
}

func (s *InputBlockContext) InputField(i int) IInputFieldContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IInputFieldContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IInputFieldContext)
}

func (s *InputBlockContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *InputBlockContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *InputBlockContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case EndpointVisitor:
		return t.VisitInputBlock(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *EndpointParser) InputBlock() (localctx IInputBlockContext) {
	localctx = NewInputBlockContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, EndpointParserRULE_inputBlock)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(84)
		p.Match(EndpointParserINPUT)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(85)
		p.Match(EndpointParserLBRACE)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	p.SetState(89)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	for _la == EndpointParserIDENT {
		{
			p.SetState(86)
			p.InputField()
		}

		p.SetState(91)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(92)
		p.Match(EndpointParserRBRACE)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IInputFieldContext is an interface to support dynamic dispatch.
type IInputFieldContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	IDENT() antlr.TerminalNode
	TypeRef() ITypeRefContext
	InputSourceRule() IInputSourceRuleContext

	// IsInputFieldContext differentiates from other interfaces.
	IsInputFieldContext()
}

type InputFieldContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyInputFieldContext() *InputFieldContext {
	var p = new(InputFieldContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = EndpointParserRULE_inputField
	return p
}

func InitEmptyInputFieldContext(p *InputFieldContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = EndpointParserRULE_inputField
}

func (*InputFieldContext) IsInputFieldContext() {}

func NewInputFieldContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *InputFieldContext {
	var p = new(InputFieldContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = EndpointParserRULE_inputField

	return p
}

func (s *InputFieldContext) GetParser() antlr.Parser { return s.parser }

func (s *InputFieldContext) IDENT() antlr.TerminalNode {
	return s.GetToken(EndpointParserIDENT, 0)
}

func (s *InputFieldContext) TypeRef() ITypeRefContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ITypeRefContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ITypeRefContext)
}

func (s *InputFieldContext) InputSourceRule() IInputSourceRuleContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IInputSourceRuleContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IInputSourceRuleContext)
}

func (s *InputFieldContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *InputFieldContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *InputFieldContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case EndpointVisitor:
		return t.VisitInputField(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *EndpointParser) InputField() (localctx IInputFieldContext) {
	localctx = NewInputFieldContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 8, EndpointParserRULE_inputField)
	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(94)
		p.Match(EndpointParserIDENT)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(95)
		p.TypeRef()
	}
	{
		p.SetState(96)
		p.InputSourceRule()
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IInputSourceRuleContext is an interface to support dynamic dispatch.
type IInputSourceRuleContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	AllInputSource() []IInputSourceContext
	InputSource(i int) IInputSourceContext
	LPAREN() antlr.TerminalNode
	RPAREN() antlr.TerminalNode
	AllPIPE() []antlr.TerminalNode
	PIPE(i int) antlr.TerminalNode

	// IsInputSourceRuleContext differentiates from other interfaces.
	IsInputSourceRuleContext()
}

type InputSourceRuleContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}
